1999-08-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: paranoia check.

1999-08-11  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: try to catch "Too many open files" server error;
	  check for the substring in file name too; remove old code for
	  switching to sync mode.

1999-08-11  Alexander V. Lukyanov  <lav@yars.free.net>

	* lftpget: options -c -v -d.
	* Http.cc: change level of Connecting message.

1999-08-10  Alexander V. Lukyanov  <lav@yars.free.net>

	* lftpget: turn off final rate printing.
	* MirrorJob.cc: don't reset time on unchanged files - it can be bad
	  if time-prec>0 and files have really changed but have the same size.
	  (reported by Oscar Y Takeshita)

1999-08-09  Alexander V. Lukyanov  <lav@yars.free.net>

	* HttpDir.cc: (HttpDirList::Do) use proper prefix for ls -f.

1999-08-08  Alexander V. Lukyanov  <lav@yars.free.net>

	* HttpDir.cc: only try to get info for href links.

1999-08-06  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: (cmd_get) decode %xx in default output file name.
	* XferJob.h: disable non_strict_urls (too complex).

1999-08-06  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h, resource.cc: add ftp:rest-list setting.
	* Job.h, Job.cc: more useful Job::AcceptSig.
	* CmdExec.cc: improve AcceptSig.
	* SleepJob.cc: assign jobno and cmdline to sub-CmdExec.

1999-08-05  Alexander V. Lukyanov  <lav@yars.free.net>

	* modconfig.h: enable proto-ftp module for real.

1999-08-05  Alexander V. Lukyanov  <lav@yars.free.net>

	* ArgV.h, CmdExec.cc: (ArgV::CombineQuoted) new method.
	* commands.cc: fix `at' command to quote the command to execute.
	* lftp.cc: use CombineQuoted.

1999-08-05  Alexander V. Lukyanov  <lav@yars.free.net>

	* FtpListInfo.cc: fix NT listing parser for the case of file name
	  with spaces.

1999-08-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc, FindJob.cc, FtpCopy.cc, LsJob.cc, MirrorJob.cc,